[gd_scene load_steps=3 format=3 uid="uid://rr33shknug3p"]

[ext_resource type="Script" path="res://Scripts/HintArea.gd" id="1_x0xw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_noitu"]
size = Vector2(60, 16)

[node name="HintArea" type="Area2D"]
position = Vector2(40, -3)
script = ExtResource("1_x0xw0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_noitu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
